--- a/类型判断.md
+++ b/类型判断.md
@@ -9,4 +9,14 @@ https://github.com/mqyqingfeng/Blog/issues/28
   - 特殊的： Object.prototype.toString.call(undefined)     Object.prototype.toString.call(null)
   - 利用该特性实现一个 函数：
   ```
+  var class2Type = {};
+  // 生成class2type映射
+"Boolean Number String Function Array Date RegExp Object Error".split(" ").map(function(item, index) {
+    class2type["[object " + item + "]"] = item.toLowerCase();
+})
+
+  function type(obj) {
+    if (obj == null) return obj + '';
+    return typeof obj === 'object' || typeof obj === 'function' ? class2Type[Object.prototype.toString.call(obj)] || 'object': typeof obj
+  }
   ```
