--- a/类型判断.md
+++ b/类型判断.md
@@ -20,3 +20,14 @@ https://github.com/mqyqingfeng/Blog/issues/28
     return typeof obj === 'object' || typeof obj === 'function' ? class2Type[Object.prototype.toString.call(obj)] || 'object': typeof obj
   }
   ```
+  ```
+  function type(obj) {
+    let style = typeof temp;
+    if (style !== 'object') {
+      return style
+    }
+    style = Object.prototype.toString.call(temp);
+    return style.split(' ')[1].slice(0, -1).toLowerCase();
+  }
+  ```
+ 
