--- a/类型判断.md
+++ b/类型判断.md
@@ -30,4 +30,63 @@ https://github.com/mqyqingfeng/Blog/issues/28
     return style.split(' ')[1].slice(0, -1).toLowerCase();
   }
   ```
+  ## plainObject，该对象是通过 {} 或 new Object 创建的，该 对象包含0个 或多个键值对。目的是为了与js 对象 如 null， 数组， 宿主对象（docuemnt）等作区分。
+  - jQuery 3.0 里面的实现方法：
+  ```
+  var class2type = {};
+  var toString = class2trpe.toString; // 相当于 Object.prototype.toString
+  var hasOwn = class2type.hasOwnProperty; // 相当于 Object.prototype.hasOwnProperty
+  function isPlainObject(obj) {
+    var proto, Ctor;
+    if (!obj || toString.call(obj) !== '[object Object]') return false; // 排除掉明显不是obj的以及一些宿主对象如Window
+    ptoto = Object.getPrototypeOf(obj); 
+    if (!proto) return true; // 没有原型的对象（Object.create(null)）也是。
+    Ctor = hasOwn.call(proto, 'constructor') && proto.constructor; // 具有构造函数，有则赋值。
+    return typeof Ctor === 'function' && hasOwn.toString.call(Ctor) === hasOwn.toString.call(Object); // Ctor 的 构造器 是不是 Object 的构造函数。
+  }
+  
+ // hasOwn.toString.call(Ctor) // function Object() { [native code] }
+ // Object.prototype.toString.call(Ctor) // [object Function]
  
+ // isPlainObject({}) // true
+ // isPlainObject(new Object)) // true
+ // isPlainObject(Object.create(null)); // true
+ //isPlainObject(Object.assign({a: 1}, {b: 2})); // true
+ // isPlainObject(new Person('yayu')); // false
+ //isPlainObject(Object.create({})); // false
+  ```
+ ## EmptyObject, 判断是否是空对象
+ - 
+ ```
+ fucntion isEmptyObject(obj) {
+  var name;
+  // 根据是否有属性判断。
+  for(name in obj) {
+    return false;
+  }
+  return true;
+ }
+ ```
+## window 对象，
+- 
+```
+// window 对有一个 window 属性指向自身。
+function isWindow(obj) {
+  return obj !== bull && obj === obj.window;
+}
+```
+## isArrayLink， 满足下列条件之一即可：1. 是数组， 2. 长度为0， 3. length 属性大于0 时， obj[length - 1]
+```
+function isArrayLink(obj) {
+  var length = !! obj && 'length' in obj && obj.length;
+  var typeRes = type(obj);
+  if (typeRes === 'function' || isWindow(obj) return false; // 排除 function 和 window 的情况。
+  return typeRes === 'arrray' || length === 0 || typeof length === 'number' && length > 0 && (length - 1) in obj;
+}
+```
+## isElement， 是不是 DOM 元素
+```
+isElement = function (obj) {
+  return !!(obj && obj.nodeType === 1);
+}
+```
