--- a/求数组的最大值和最小值.md
+++ b/求数组的最大值和最小值.md
@@ -1,1 +1,24 @@
-
+## 求数组中的最大值：
+- 法1： Math.max(...arr);
+  - 注意：
+    - 如果有任一参数不能被转换为数值，则结果为NaN。
+    - 如果没有参数， 则结果返回 -Infinity(负无穷大)。
+- 法2： for 循环：
+```
+let result = 0;
+for (let i = 1, length = arr.length; i++) {
+  if (arr[i] > arr[result]) result = i;
+}
+return arr[result];
+```
+- 法3： reduce：
+```
+return arr.reduce((prev, next) => {
+  return Math.max(prev, next);
+})
+```
+- 法4： sort：
+```
+arr.sort((a,b) => a-b);
+return arr[arr.length - 1];
+```
