--- a/数组的 扁平化.md
+++ b/数组的 扁平化.md
@@ -32,12 +32,13 @@ function flatten(arr) {
 ```
 ##4. undercore 中的抽象的扁平函数：
 ```
+// 有所改动
 //  为了方便多个API调用， 进行了更多配置
 /**
  * 数组扁平化
  * @param  {Array} input   要处理的数组
  * @param  {boolean} shallow 是否只扁平一层
- * @param  {boolean} strict  是否严格处理元素，下面有解释
+ * @param  {boolean} strict  是否严格处理元素，为true， 表示过滤非数组元素。
  * @param  {Array} output  这是为了方便递归而传递的参数
  * 源码地址：https://github.com/jashkenas/underscore/blob/master/underscore.js#L528
  */
@@ -55,5 +56,34 @@ function flatten(arr) {
   });
   return output;
  }
+// strict 和 shallow 结合的情况：
+shallow true + strict false ：正常扁平一层
+shallow false + strict false ：正常扁平所有层
+shallow true + strict true ：去掉非数组元素
+shallow false + strict true ： 返回一个[]
+```
+- flatten 函数的使用
+```
+// 正常扁平化
+_.flatten = function (array, shallow) {
+  return flatten(array, shallow, false);
+}
+// 传入多个数组，然后返回传入的数组的并集：(并集， 不能有重复元素哦),如果传入的参数不是数组。会将参数跳过。
+function unique(array) {
+  return Array.from(new Set(array));
+}
+_.union = function() {
+  return unique(flatten(arguments, true, true));
+}
+_.union([1, 2, 3], [101, 2, 1, 10], 4, 5);
+=> [1, 2, 3, 101, 10]
+// _.difference， 取出来自array数组，并且不存在于多个other数组的元素。
+// 实现方法也很简单，扁平 others 的数组，筛选出 array 中不在扁平化数组中的值：
+function differwnce(array, ...rest){
+  rest = flatten(rest, true, true);
+  return array.filter(function (item) {
+    return res.indexOf(item) === -1;
+  })
+}
 
 ```
