--- a/递归.md
+++ b/递归.md
@@ -15,4 +15,12 @@ function f(x){
     return g(x) + 1;
 }
 ```
+- 阶乘函数优化：
+```
+function factorial(n, res = 1) {
+  if (n == 1) return res;
+  return factorial(n-1, n*res);
+}
+console.log(factorial(4)); // 24
+```
 - https://github.com/mqyqingfeng/Blog/issues/49
