--- a/V8排序.md
+++ b/V8排序.md
@@ -1,10 +1,10 @@
 ##1. 概述：
 - v8 是 Chrome 的javascript 引擎，其中关于数组的排序完全采用了js实现。
 - 当数组长度小于等于 10 时，采用插入排序，大于 10 的时候，采用快速排序。(当然了，这种说法并不严谨)。
+- 准确的说，当数组长度大于 10 的时候，v8 采用了快速排序和插入排序的混合排序方法。细分后的数组长度如果小于10，就采用插入排序。
 - 时间复杂度：
   是算法所需要的计算工作量，它考虑当输入值大小趋近无穷大时的情况。
 - 空间复杂度：
-  
 - 稳定性：
   相同的元素在排序后是否还保持相对的位置。对于不稳定的排序算法，只要举出一个实例，即可以说明它的不稳定性，对于稳定的排序算法，必须对算法进行分析从而得到稳定的特性。
 ## 2. 插入排序：
@@ -93,10 +93,10 @@ console.log(quickSort(arr));
         }
         a[j + 1] = element;
     }
-};
+  };
 
 
-function QuickSort(a, from, to) {
+  function QuickSort(a, from, to) {
 
     var third_index = 0;
     while (true) {
@@ -114,7 +114,7 @@ function QuickSort(a, from, to) {
         var v0 = a[from];
         var v1 = a[to - 1];
         var v2 = a[third_index];
-
+        // 取 中间下标， 第一个值， 最后一个值中的中间数的大小
         var c01 = comparefn(v0, v1);
         if (c01 > 0) {
             // v1 < v0, so swap them.
@@ -148,31 +148,37 @@ function QuickSort(a, from, to) {
 
         var low_end = from + 1; // Upper bound of elements lower than pivot.
         var high_start = to - 1; // Lower bound of elements greater than pivot.
-
+        // 将基准数 与 数组的 第二个 元素互换。
         a[third_index] = a[low_end];
         a[low_end] = pivot;
 
         // From low_end to i are elements equal to pivot.
         // From i to high_start are elements that haven't been compared yet.
-
+         // 比较从第三个数 到 倒数第二个 之间的数， 因为其他的数相对大小对的。
         partition: for (var i = low_end + 1; i < high_start; i++) {
             var element = a[i];
             var order = comparefn(element, pivot);
             if (order < 0) {
+                // 如果 a[i] 小于 基准数，交换位置。
                 a[i] = a[low_end];
                 a[low_end] = element;
                 low_end++;
             } else if (order > 0) {
+                // 如果 a[i] 大于 基准数。
+                // 比较 基准数与 末尾的元素 大小， 如果 最后的元素大，最后元素的指向向前移。
+                // 直到，最后的元素小了，退出循环，或 high_start == i，退出大循环
                 do {
                     high_start--;
                     if (high_start == i) break partition;
                     var top_elem = a[high_start];
                     order = comparefn(top_elem, pivot);
                 } while (order > 0);
-
+               // 最后的元素小了， 与 目前所在的 i 位置的 元素交换位置。
                 a[i] = a[high_start];
                 a[high_start] = element;
                 if (order < 0) {
+                    // 此时， a[i] > pivot , a[high_start] < pivot，交换后，a[i] < pivot
+                    // pivot，就是指向low_end，a[i] 和 a[low_end] 交换位置
                     element = a[i];
                     a[i] = a[low_end];
                     a[low_end] = element;
@@ -183,21 +189,25 @@ function QuickSort(a, from, to) {
 
 
         if (to - high_start < low_end - from) {
+            // 前面小于 基准的 数 少于 后面 大于 基准的数。
+            // 比较 从 high_start 到 to 之间的元素。
             QuickSort(a, high_start, to);
+            // 然后改变 to， 重新循环，改变 fron 到 high_start 之间的数。
             to = low_end;
         } else {
+            // 比较 从 from 到 low_end 之间的元素。
             QuickSort(a, from, low_end);
             from = high_start;
         }
     }
-}
+  }
 
-var arr = [10, 9, 8, 7, 6, 5, 4, 3, 2, 1, 0];
+  var arr = [10, 9, 8, 7, 6, 5, 4, 3, 2, 1, 0];
 
-function comparefn(a, b) {
+  function comparefn(a, b) {
     return a - b
-}
+  }
 
-QuickSort(arr, 0, arr.length)
-console.log(arr)
+  QuickSort(arr, 0, arr.length)
+  console.log(arr)
   ```
