--- a/V8排序.md
+++ b/V8排序.md
@@ -187,12 +187,12 @@ console.log(quickSort(arr));
             }
         }
 
-
+        // 上面的操作相当于，将 数组划分为 比基准小（from , low_end）的 和比基准大（high_start , to） 的 两部分。然后依次 处理两边的数。
         if (to - high_start < low_end - from) {
             // 前面小于 基准的 数 少于 后面 大于 基准的数。
             // 比较 从 high_start 到 to 之间的元素。
             QuickSort(a, high_start, to);
-            // 然后改变 to， 重新循环，改变 fron 到 high_start 之间的数。
+            // 然后改变 to， 重新循环，改变 from 到 low_end 之间的数。
             to = low_end;
         } else {
             // 比较 从 from 到 low_end 之间的元素。
